feat(api): local token minter
